static/scss/final-exam-card.scss
.final-exam-card {
  font-size: 14px;
  box-shadow: 0 0;

  .error {
    font-size: 12px;
    color: $validation-red;
  }

  .card-header {
    display: flex;
    flex-direction: row;

    .exam-icon {
      width: 40px;
      margin-right: 10px;
    }
  }

  .exam-scheduling {
    display: flex;
    justify-content: space-between;
    margin-top: 12px;

    @include breakpoint(phone) {
      flex-direction: column;
    }

    .program-info {
      margin-top: 8px;
      flex-grow: 2;

      @include breakpoint(phone) {
        margin-left: 10px;
      }
    }

    ul {
      padding-left: 30px;
    }

    li {
      font-weight: 500;
      line-height: 1.4;
      margin: 8px 0 10px;
    }
  }

  .info-box {
    background-color: $lightgray;
    margin: 0 5px 10px;
    padding: 20px 22px;
    display: flex;
    align-items: center;
    white-space: pre-wrap;

    @include breakpoint(phone) {
      margin: 0 0 10px;
      padding: 13px 16px;
    }

    .flow {
      white-space: normal;
      padding: 8px;
    }

    &.split {
      flex-direction: row;
      white-space: pre-wrap;

      > * {
        width: 50%;
      }

      > :first-child {
        border-right: 2px solid $histogramgray;
      }

      .address-info {
        padding-left: 22px;
        display: flex;
        justify-content: space-between;

        .address {
          display: flex;
          flex-direction: column;

          .name {
            font-weight: 600;
          }
        }
      }
    }
  }

  .currently-ineligible {
    margin-left: 6px;
  }
}

